website/src/overrides.css
.no-border td {
    border: none !important;
}

.full-height {
    min-height: 100vh;
}

.floating {
    margin: 0px;
    top: auto;
    right: 20px;
    bottom: 20px;
    left: auto;
    position: fixed;
}

